# HiShinUnit

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pbrain-HiShinUnit.sln  pbrain-HiShinUnit.vcxproj  pbrain-HiShinUnit.vcxproj.filters
include/: AAI.hpp  AICase.hpp  Board.h  Board.hpp  CanIProcess.hpp  Cell.h  Cell.hpp  Checker.h  Checker.hpp  Core.h  Logger.hpp  MonteCarloCase.hpp  MonteCarloIA.hpp  Position.hpp  Singleton.hpp  TaskManager.h  TaskManager.hpp  ThreadPool.hpp
include/Core/: Core.hpp  TaskManager.hpp  ThreadPool.hpp  ThreadState.hpp
include/Evaluator/: CanIProcess.hpp  Evaluator.hpp  Move.h  Point.hpp
include/Logic/: AAI.hpp  AICase.hpp  Board.hpp  Position.hpp
include/MonteCarlo/: Checker.hpp  MonteCarloCase.hpp  MonteCarloIA.hpp
include/Shin/: ShinAI.hpp  ShinCase.hpp  ShinHalbard.hpp
include/Shin/Evaluator/: Evaluator.hpp  Line.hpp  Point.hpp
include/Tools/: Splitter.hpp
src/: AAI.cpp  AICase.cpp  Board.cpp  Checker.cpp  Core.cpp  Logger.cpp  MonteCarloCase.cpp  MonteCarloIA.cpp  Position.cpp  Splitter.cpp  TaskManager.cpp  ThreadPool.cpp  main.cpp
src/Core/: Core.cpp  TaskManager.cpp  ThreadPool.cpp
src/Evaluator/: CanIProcess.cpp  Evaluator.cpp  Point.cpp
src/Logic/: AAI.cpp  AICase.cpp  Board.cpp  Checker.cpp  Position.cpp
src/MonteCarlo/: CanIProcess.cpp  Checker.cpp  MonteCarloCase.cpp  MonteCarloIA.cpp
src/Shin/: ShinAI.cpp  ShinCase.cpp  ShinHalbard.cpp
src/Shin/Evaluator/: Evaluator.cpp  Line.cpp  Point.cpp
src/Tools/: Splitter.cpp
